Fix CodeQL note-severity alerts: deprecated JDK calls and inefficient expressions
Migrate away from JDK and third party API deprecated in Java 9 and later, and
apply the mechanical cleanups reported by the java/inefficient-* queries:

* Class.newInstance() is replaced with getDeclaredConstructor().newInstance() in
  the 53 places where components are loaded reflectively. All of these call sites
  already caught Exception, except the quicksetup application loader whose catch
  clauses now also handle NoSuchMethodException and InvocationTargetException.
* X509Certificate.getSubjectDN()/getIssuerDN(), which return a Principal from the
  internal sun.security API, are replaced with getSubjectX500Principal() and
  getIssuerX500Principal(). The call sites either print the DN, log it or use it
  as a trust store alias; Platform.isSelfSigned() now compares the canonical
  X.500 forms of the two DNs.
* new Integer/Long/Byte(...) are replaced with valueOf(...), the Provider
  constructor taking a double version with the one taking a version string,
  JList.getSelectedValues() with getSelectedValuesList(),
  JsonParser.getCurrentName() with currentName(), and InputEvent.getModifiers()
  with getModifiersEx().
* equals("") is replaced with isEmpty(), new String(literal) with the literal
  itself, and two key set iterations with entry set iterations.
* LDIF.toLDIF() no longer calls toString() on the writer it has just written to,
  ReturnCode gets a toString(), and the replication trace logs the DN of the
  initialize task instead of its identity hash.
* Two @throws tags documenting an exception which cannot be thrown are removed.

Left alone: the calls to the deprecated internal API of the server itself
(ObjectClass.isPlaceHolder, AttributeDescription.getNameOrOID, Entry.addAttribute,
DirectoryServer.getConfigEntry and friends), which need a real migration rather
than a mechanical change; Subject.getSubject(), whose replacement Subject.current()
requires Java 18 while the proje