@@ -13,6 +13,7 @@
  *
  * Copyright 2006-2008 Sun Microsystems, Inc.
  * Portions Copyright 2014-2016 ForgeRock AS.
+ * Portions Copyright 2026 3A Systems, LLC.
  */
 package org.opends.server.core;
 
@@ -327,7 +328,7 @@ public class  KeyManagerProviderConfigManager
            definition.getJavaClassPropertyDefinition();
       Class<? extends KeyManagerProvider> providerClass =
            propertyDefinition.loadClass(className, KeyManagerProvider.class);
-      KeyManagerProvider provider = providerClass.newInstance();
+      KeyManagerProvider provider = providerClass.getDeclaredConstructor().newInstance();
 
       if (initialize)
       {
