@@ -13,6 +13,7 @@
  *
  * Copyright 2006-2008 Sun Microsystems, Inc.
  * Portions Copyright 2014-2016 ForgeRock AS.
+ * Portions Copyright 2026 3A Systems, LLC.
  */
 package org.opends.server.core;
 
@@ -183,7 +184,7 @@ public class LogRetentionPolicyConfigManager implements
       Class<? extends RetentionPolicy> theClass =
           pd.loadClass(className, RetentionPolicy.class);
       // Explicitly cast to check that implementation implements the correct interface.
-      RetentionPolicy<?> retentionPolicy = theClass.newInstance();
+      RetentionPolicy<?> retentionPolicy = theClass.getDeclaredConstructor().newInstance();
       // next line is here to ensure that eclipse does not remove the cast in the line above
       retentionPolicy.hashCode();
       return true;
@@ -202,7 +203,7 @@ public class LogRetentionPolicyConfigManager implements
     try {
       Class<? extends RetentionPolicy> theClass =
           pd.loadClass(className, RetentionPolicy.class);
-      RetentionPolicy<LogRetentionPolicyCfg> retentionPolicy = theClass.newInstance();
+      RetentionPolicy<LogRetentionPolicyCfg> retentionPolicy = theClass.getDeclaredConstructor().newInstance();
       retentionPolicy.initializeLogRetentionPolicy(config);
       return retentionPolicy;
     } catch (Exception e) {
