@@ -13,6 +13,7 @@
  *
  * Copyright 2008 Sun Microsystems, Inc.
  * Portions Copyright 2012-2014 ForgeRock AS.
+ * Portions Copyright 2026 3A Systems, LLC.
  */
 package org.opends.server.snmp;
 
@@ -76,8 +77,8 @@ public class DsApplIfOpsEntryImpl extends DsApplIfOpsEntry implements DsEntry {
     super(mib);
     this.server = server;
     this.connectionHandlerName = connectionHandlerObjectName;
-    this.ApplIndex = new Integer(applIndex);
-    this.DsApplIfProtocolIndex = new Integer(connectionHandlerIndex);
+    this.ApplIndex = Integer.valueOf(applIndex);
+    this.DsApplIfProtocolIndex = Integer.valueOf(connectionHandlerIndex);
     this.monitor = SNMPMonitor.getMonitor(server);
   }
 
@@ -96,7 +97,7 @@ public class DsApplIfOpsEntryImpl extends DsApplIfOpsEntry implements DsEntry {
           if (index==-1) {
               return this.DsApplIfProtocol;
           }
-          return  new String("1.3.6.1..27.3.") + portNumber.substring(index+1);
+          return  "1.3.6.1..27.3." + portNumber.substring(index+1);
       }
   }
 
