@@ -318,7 +318,7 @@ public class SNMPMonitor
     Byte[] barray = new Byte[b.length];
     for (int index = 0; index < b.length; index++)
     {
-      barray[index] = new Byte(b[index]);
+      barray[index] = Byte.valueOf(b[index]);
     }
     return barray;
   }
@@ -354,7 +354,7 @@ public class SNMPMonitor
     long v = V.longValue();
     if (v > (pow(2, 32) - 1))
     {
-      return new Long(v % pow(2, 32));
+      return Long.valueOf(v % pow(2, 32));
     }
     else
     {
@@ -393,7 +393,7 @@ public class SNMPMonitor
     long v = V.longValue();
     if (v > (pow(2, 32) - 1))
     {
-      return new Long(pow(2, 32) - 1);
+      return Long.valueOf(pow(2, 32) - 1);
     }
     else
     {
@@ -417,7 +417,7 @@ public class SNMPMonitor
     {
       throw new SnmpStatusException("Returned intrumented value size too big");
     }
-    Integer ret = new Integer(V.intValue());
+    Integer ret = Integer.valueOf(V.intValue());
     return ret;
   }
 
